Update README-spark-submit-command.md